[package]
name = "webio_macros"
version = "0.8.0-alpha"
authors = ["Montasir Mirghani <montasir@webio.tech>"]
edition = "2024"
description = "Procedural macros for the WebIO ultra-low-latency framework."
license = "MIT"
homepage = "https://github.com/dr-montasir/webio_macros"
repository = "https://github.com/dr-montasir/webio_macros"
readme = "README.md"
keywords = ["std", "web", "webio", "async", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers", "asynchronous"]

exclude = [
    ".github/**",
    "examples/**",
    "tests/**",
    "Cargo.lock",
    "dev.md"
]

[lib]
name = "webio_macros"
path = "src/lib.rs"
proc-macro = true

[features]
default = []
http = ["dep:http"]

[dependencies]
http = { package = "ureq", version = "3.2.0", optional = true, features = ["json"] }

[dev-dependencies]
webio = "0.8.0-alpha"